name:                reactd3
version:             0.1.0.0
synopsis:            Snap + Create React App + D3 example
description:         Please see README.md
homepage:            https://github.com/marksauter/reactd3#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Sauter
maintainer:          dr.funk.mark@gmail.com
copyright:           2017 Mark Sauter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable reactd3-exe
  hs-source-dirs:      server server/Snap/Snaplet
  main-is:             Main.hs
  other-modules:       Application Db Site Util Snap.Snaplet.SqliteJwt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    aeson,
    attoparsec,
    base                  >= 4      && < 5,
    bcrypt                >= 0.0.10,
    bytestring            >= 0.9.1  && < 0.11,
    configurator,
    containers,
    jwt,
    lens,
    mtl                   >= 2 && < 3,
    snap                  >= 1.0,
    snap-core             >= 1.0,
    snap-server           >= 1.0,
    snap-loader-static,
    snaplet-sqlite-simple >= 1.0,
    sqlite-simple         >= 0.1 && <1.0,
    text                  >= 1.2,
    either                >= 3.1,
    errors                >= 2.1.2,
    unorded-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/marksauter/reactd3
